--- a/src/Render.Interop/Render.Interop.vcxproj
+++ b/src/Render.Interop/Render.Interop.vcxproj
@@ -21,38 +21,37 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{B4D924B6-04C2-45EB-B26C-EF9854EC3866}</ProjectGuid>
-    <Keyword>NetCoreCProj</Keyword>
-    <RootNamespace>RenderInterop</RootNamespace>
+    <Keyword>Win32Proj</Keyword>
+    <RootNamespace>Interop</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>
+    </TargetFramework>
+    <ProjectName>Interop</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
+    <CLRSupport>false</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -130,20 +129,47 @@
     <ClInclude Include="libyuv\include\libyuv\scale.h" />
     <ClInclude Include="libyuv\include\libyuv\scale_row.h" />
     <ClInclude Include="libyuv\include\libyuv\version.h" />
-    <ClInclude Include="NativeMethods.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FrameConverter.cpp" />
+    <ClCompile Include="FrameConverter_wrap.cxx" />
     <ClCompile Include="libyuv\source\convert_argb.cc" />
     <ClCompile Include="libyuv\source\cpu_id.cc" />
     <ClCompile Include="libyuv\source\planar_functions.cc" />
     <ClCompile Include="libyuv\source\row_common.cc" />
     <ClCompile Include="libyuv\source\scale.cc" />
     <ClCompile Include="libyuv\source\scale_common.cc" />
-    <ClCompile Include="NativeMethods.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Target Name="_CheckForLanguageAndFeatureCombinationSupport" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ItemGroup>
+    <CustomBuild Include="FrameConverter.i">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">echo Invoking SWIG...
+echo on
+C:\swig\swig.exe -c++ -csharp -outdir "%(FullPath)\swig" "%(FullPath)"
+%40echo off
+</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(Filename)_wrap.cxx;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">echo Invoking SWIG...
+echo on
+C:\swig\swig.exe -c++ -csharp -outdir "$(ProjectDir)\swig" "%(FullPath)"
+%40echo off
+</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(Filename)_wrap.cxx;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">echo Invoking SWIG...
+echo on
+C:\swig\swig.exe -c++ -csharp -outdir "$(ProjectDir)\swig" "%(FullPath)"
+%40echo off
+</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(Filename)_wrap.cxx;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">echo Invoking SWIG...
+echo on
+C:\swig\swig.exe -c++ -csharp -outdir "$(ProjectDir)\swig" "%(FullPath)"
+%40echo off
+</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(Filename)_wrap.cxx;%(Outputs)</Outputs>
+    </CustomBuild>
+  </ItemGroup>
 </Project>
