--- a/src/WinUISample/WinUISample.csproj
+++ b/src/WinUISample/WinUISample.csproj
@@ -5,15 +5,16 @@
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>WinUISample</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <Platforms>x86;x64;arm64</Platforms>
+    <Platforms>x86;x64;arm64;AnyCPU</Platforms>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <Nullable>enable</Nullable>
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
     <WindowsPackageType>None</WindowsPackageType>
+    <BaseIntermediateOutputPath />
   </PropertyGroup>
   <ItemGroup>
     <None Remove="VIdeoView2.xaml" />
@@ -46,7 +47,6 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Render.Interop\Render.Interop.vcxproj" />
     <ProjectReference Include="..\Render.Source\Render.Source.csproj" />
   </ItemGroup>
   <ItemGroup>
