--- a/src/UnoSample/UnoSample/UnoSample.Windows/UnoSample.Windows.csproj
+++ b/src/UnoSample/UnoSample/UnoSample.Windows/UnoSample.Windows.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
     <RootNamespace>UnoSample</RootNamespace>
-    <Platforms>x86;x64;arm64;AnyCPU</Platforms>
+    <Platforms>x86;x64;arm64</Platforms>
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
     <DefaultLanguage>en</DefaultLanguage>
