--- a/src/WPFSample/WPFSample.csproj
+++ b/src/WPFSample/WPFSample.csproj
@@ -9,6 +9,26 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);USE_LIBYUV;DX_YUV;D3DImage</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);USE_LIBYUV;DX_YUV;D3DImage</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DefineConstants>$(DefineConstants);USE_LIBYUV;DX_YUV;D3DImage</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DefineConstants>$(DefineConstants);USE_LIBYUV;DX_YUV;D3DImage</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Wpf.Interop.DirectX-x64" Version="0.9.0-beta-22856" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\DirectX.Interop\DirectX.Interop.vcxproj" />
     <ProjectReference Include="..\Render.Interop\swig\Render.InteropCs.csproj" />
