--- a/src/WPFSample/WPFSample.csproj
+++ b/src/WPFSample/WPFSample.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -26,7 +26,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Wpf.Interop.DirectX-x64" Version="0.9.0-beta-22856" />
+    <Compile Remove="D3D11InteropImageElement.cs" />
+    <Compile Remove="D3D11InteropImageSource.cs" />
   </ItemGroup>
 
   <ItemGroup>
