--- a/src/WinUISample/WinUISample.csproj
+++ b/src/WinUISample/WinUISample.csproj
@@ -47,8 +47,12 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Render.Interop\swig\Render.InteropCs.csproj" />
-    <ProjectReference Include="..\Render.Source\Render.Source.csproj" />
+    <ProjectReference Include="..\Render.Interop\swig\Render.InteropCs.csproj">
+      <ReferenceSourceTarget></ReferenceSourceTarget>
+    </ProjectReference>
+    <ProjectReference Include="..\Render.Source\Render.Source.csproj">
+      <ReferenceSourceTarget></ReferenceSourceTarget>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Page Update="VideoView2.xaml">
