--- a/src/MauiSample/MauiSample.csproj
+++ b/src/MauiSample/MauiSample.csproj
@@ -56,8 +56,10 @@
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
-	  <PackageReference Include="Microsoft.Maui.Graphics" Version="6.0.501" />
 	  <PackageReference Include="Microsoft.Maui.Graphics.Skia" Version="6.0.501" />
+	  <PackageReference Include="SkiaSharp" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.Views.Maui.Controls.Compatibility" Version="2.88.3" />
 	</ItemGroup>
 
 	<ItemGroup>
